--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>about Cameron Ricks</title>
-    <link rel="Stylesheet" href="./index.css">
+    <link rel="Stylesheet" href="index.css">
 </head>
 <header>
     <h1>about me</h1>
