--- a/practice/week3.html
+++ b/practice/week3.html
@@ -18,7 +18,7 @@
     <main>
       <section>
         <h2>News Article</h2>
-        <img href="https://picsum.photos/300/200/" alt="placeholder image" />
+        <img src="https://picsum.photos/300/200" alt="placeholder image" />
         <p class="pink-background">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, sunt
           culpa esse optio illo laborum ab ipsum at ea deserunt a in, quas eos
