--- a/wwr/index.html
+++ b/wwr/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
-    <link rel="stylesheet" href="styles/site-plan-rafting.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
@@ -61,7 +61,7 @@
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
-            <a href="https://facebook.com">
+            <a href="https://facebook.com" target="_blank>
                 <img src="images/facebook.png" alt="fb icon">
             </a>
             <a href="https://twitter.com">
