--- a/final-project/site-plan-personal.html
+++ b/final-project/site-plan-personal.html
@@ -46,9 +46,9 @@
       <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in iLearn. You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
 
       <table class="colors">
-        <tr><th>710627</th><th>DE0D92</th><th>595457</th><th>Accent 2</th></tr>
+        <tr><th>Primary</th><th>Secondary</th><th>Accent1</th><th>Accent 2</th></tr>
         <!-- Switch to the site-plan.css file and change your colors there. -->
-        <tr><td class="primary"></td><td class="secondary"></td><td class="accent1"></td><td class="accent2"></td></tr>
+        <tr><td class="primary">#710627</td><td class="secondary">#DE0D92</td><td class="accent1">#595457</td><td class="accent2">white</td></tr>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
@@ -65,10 +65,48 @@
         Paragraph Font:  Roboto, Helvetica, sans-serif  <!-- change this -->
       </h4>
       <h3>
-        Normal paragraph example
+        Who is Cameron Ricks, and what makes him unique?    
       </h3>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        I’m Cameron Ricks, a person who thrives on spontaneity, honesty, and making the most out of every moment—thanks in large part to my ADHD, which keeps life anything but boring! I’m the kind of person who says whatever comes to mind, and that kind of energy makes even mundane conversations memorable. While some might find daily routines tedious, my approach injects humor and excitement into just about anything. This openness and candidness bring a refreshing vibe, keeping people entertained and engaged while never quite knowing what fun twist might come next.   
+      </p>
+      <h3>
+        What are Cameron’s hobbies, passions, and daily activities?
+      </h3>
+      <p>
+        I’m all about staying active and challenging myself physically. You can usually find me hitting the gym, playing sports, or even pushing my limits by training for triathlons. These activities aren’t just hobbies—they’re ways I maintain focus, clear my mind, and channel all that energy. But beyond the physical side, my true passion is building a stable and fulfilling career that lets me work from home one day. Why? Because, for me, family is everything. Having the flexibility to be present for the ones I care about, while growing professionally, is a goal that keeps me motivated every day
+      </p>
+      <img src="images/tricloseup2.jpg" alt="">
+      <h3>
+        What is Cameron looking for in a romantic partner?
+      </h3>
+      <p>
+        I’m looking for someone who matches my level of enthusiasm and commitment in a relationship—someone who brings as much energy, excitement, and dedication to our connection as I do. I believe that a strong partnership thrives on balance, and I want to be with someone who reciprocates that balance by bringing the same level of effort, passion, and care. It’s not just about grand gestures; it’s about showing up every day with the intention to grow, share, and uplift one another.
+      </p>
+      <h3>
+        Does Cameron have a fun side, a deep side, or both?
+      </h3>
+      <p>
+        I like to think I’m the whole package—fun and deep in equal measure, whenever the situation calls for it. I’m not afraid to be silly and crack jokes, especially when it lightens the mood or brings a smile to someone’s face. But when it’s time to get serious, whether discussing life goals or providing support through difficult times, I know how to be fully present and thoughtful. I can pivot from playfully teasing to offering a listening ear, and that’s one of my favorite things about myself. I’m here to be everything I can, for all moments in life.
+      </p>
+      <h3>
+        What values or beliefs are important to Cameron?
+      </h3>
+      <p>
+        Family is at the core of who I am. I believe in building meaningful relationships rooted in loyalty, love, and mutual respect. While I have my own religious beliefs, what’s most important is having a partner who respects those beliefs and shares a mutual respect for theirs. My values reflect kindness, understanding, and the belief that we are all stronger together. These are the things I want to build my life around—and I’m excited to find someone who feels the same.
+      </p>
+      <img src="images/color2.jpg" alt="">
+      <h3>
+        What kind of future or experiences is Cameron hoping to share with someone?
+      </h3>
+      <p>
+        I want to share both the highs and the lows with someone special. Life is a series of peaks and valleys, and I believe every experience—good or bad—offers a chance to grow stronger, together. I dream of creating memories built on adventure, laughter, and triumphs, but also weathering the storms hand-in-hand. For me, the best future is one where we can face life’s challenges and celebrate life’s blessings as a unified team.
+      </p>
+      <h3>
+        Does Cameron’s personality and energy match what they’re looking for in a partner?
+      </h3>
+      <p>
+        Matching people’s energy comes naturally to me—it’s almost like a superpower! Whether it’s hyping up a workout session at the gym or slowing down for a quiet moment of reflection, I can adapt to what’s needed in any situation. That said, I do have a lot of energy, sometimes maybe too much! But hey, that’s where the gym comes in handy. It’s a place where I channel that energy productively. I’m ready for someone who appreciates and can keep up with my highs while also helping me find balance when needed.
       </p>
       <h3>
         Colored paragraph example
@@ -84,9 +122,9 @@
       </h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
-        <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="site-plan-personal.html">Home</a>
+        <a href="hobbies.html">Hobbies</a>
+        <a href="beliefs.html">Beliefs</a>
       </nav>
       <hr>
       <h2>
@@ -97,10 +135,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Hobbies <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          beliefs  <!-- change this -->
         </div>
 
         <div class="top">
@@ -125,26 +163,26 @@
         [Written copy for the home page here]
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/color2.jpg" alt="image for homepage">
+        <img src="images/surfing2.jpg" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Hobbies</h3>
       <p>
         [Written copy for the Page 2 here]
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/jetskii2.PNG" alt="image for page">
+        <img src="images/tri2.jpg" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Beliefs</h3>
       <p>
         [Written copy for the Page 3 here]
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/2-temples2.jpg" alt="image for page3">
+        <img src="images/temple.jpg" alt="image for page3">
 
       </ul>
       <hr>
