--- a/final-project/beliefs.html
+++ b/final-project/beliefs.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="styles/site-plan.css">
 </head>
 <header>
+    <nav>
+        <a href="site-plan-personal.html">Home</a>
+        <a href="hobbies.html">Hobbies</a>
+        <a href="beliefs.html">Beliefs</a>
+      </nav>
 <h1>
     CAMS BELIEFS
 </h1>
