--- a/final-project/hobbies.html
+++ b/final-project/hobbies.html
@@ -15,9 +15,19 @@
     <h1>CAMS HOBBIES!</h1>
 </header>
 <body>
+    <main>
     <p>this is all the fun things I do!</p>
+    <p>
+        "When I hit the dance floor for some swing, it’s not just about the music—it’s about the connection. There’s something irresistible about the rhythm, the spins, and the playful back-and-forth. It’s like a secret language, where every step says, ‘I see you.’ And trust me, when I’m in the groove, I’m not just dancing—I’m making sure every move has a little extra charm, just in case someone’s watching close enough to feel the spark." 😉</p>
     <img src="images/swing2.jpg" alt="">
-    <img src="images/surfing2.jpg" alt="">
 
+"There’s something about chasing waves, scaling cliffs, and pushing through triathlons that just feels electric—like I’m built for the thrill of it all. Whether it’s the rush of catching the perfect surf, the grit of a steep rock face, or the steady grind of a long race, I’m all in for anything that keeps my heart racing. And hey, if someone’s looking for a partner who’s always up for an adventure, I’d say they just might have found their match." 😉
+    <img src="images/surfing2.jpg" alt="">
+    <p>
+        "Every time I hit the gym, it’s like I’m not just lifting weights—I’m lifting my game. Sure, I’m there for the workout, but let’s be honest, the real flex is catching a glance in the mirror and knowing I’m crushing it. Whether it’s the way I push through that last set or how I make those treadmills jealous with my pace, the gym’s not just a routine—it’s my playground. And hey, if someone happens to notice, well, let’s just call that a bonus cardio boost." 😉</p>
+    </main>
 </body>
+<footer>
+    <p>&copy; 2024 | <span id="my-name">Cameron Ricks</span> | All Rights Reserved</p>
+  </footer>
 </html>
