--- a/final-project/hobbies.html
+++ b/final-project/hobbies.html
@@ -8,9 +8,12 @@
 </head>
 <header>
     <nav>
-        <a href="site-plan-personal.html">Home</a>
+        <a href="home.html">Home</a>
         <a href="hobbies.html">Hobbies</a>
         <a href="beliefs.html">Beliefs</a>
+        <a href="site-plan-personal.html">site-plan</a>
+        <img class="logo" src="/final-project/images/image.png" alt="Logo image">
+
       </nav>
     <h1>CAMS HOBBIES!</h1>
 </header>
