--- a/final-project/beliefs.html
+++ b/final-project/beliefs.html
@@ -8,9 +8,12 @@
 </head>
 <header>
     <nav>
-        <a href="site-plan-personal.html">Home</a>
+        <a href="home.html">Home</a>
         <a href="hobbies.html">Hobbies</a>
         <a href="beliefs.html">Beliefs</a>
+        <a href="site-plan-personal.html">site-plan</a>
+        <img class="logo" src="/final-project/images/image.png" alt="Logo image">
+
       </nav>
 <h1>
     CAMS BELIEFS
@@ -21,4 +24,7 @@
 <img src="images/2-temples2.jpg" alt="temple">
 <img src="images/temple.jpg" alt="">
 </body>
+<footer>
+    <p>&copy; 2024 | <span id="my-name">Cameron Ricks</span> | All Rights Reserved</p>
+  </footer>
 </html>
