--- a/final-project/site-plan-personal.html
+++ b/final-project/site-plan-personal.html
@@ -125,9 +125,10 @@
       </h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
-        <a href="site-plan-personal.html">Home</a>
+        <a href="home.html">Home</a>
         <a href="hobbies.html">Hobbies</a>
         <a href="beliefs.html">Beliefs</a>
+        <a href="site-plan-personal.html">site-plan</a>
       </nav>
       <hr>
       <h2>
