--- a/final-project/home.html
+++ b/final-project/home.html
@@ -12,17 +12,13 @@
       <a href="hobbies.html">Hobbies</a>
       <a href="beliefs.html">Beliefs</a>
       <a href="site-plan-personal.html">site-plan</a>
-      <img
-        class="logo"
-        src="/final-project/images/image.png"
-        alt="Logo image"
+      <img class="logo" src="images/image.png" alt="Logo image"
       />
     </nav>
     <h1>CAMS HOME</h1>
   </header>
   <body>
     <div>
-      <h2>Overview</h2>
       <h3>Purpose</h3>
       <p>
         Welcome to Cameron Ricks Unfiltered—a fun space all about me! Here,
@@ -128,12 +124,11 @@
         balance when needed.
       </p>
     </div>
-    </body>
+  </body>
   <footer>
     <p>
       &copy; 2024 | <span id="my-name">Cameron Ricks</span> | All Rights
       Reserved
     </p>
   </footer>
-  </html>
-  
+</html>
