--- a/final-project/hobbies.html
+++ b/final-project/hobbies.html
@@ -14,7 +14,7 @@
       <a href="site-plan-personal.html">site-plan</a>
       <img
         class="logo"
-        src="/final-project/images/image.png"
+        src="images/image.png"
         alt="Logo image"
       />
     </nav>
