--- a/final-project/beliefs.html
+++ b/final-project/beliefs.html
@@ -1,30 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beliefs</title>
-    <link rel="stylesheet" href="styles/site-plan.css">
-</head>
-<header>
+    <link rel="stylesheet" href="styles/site-plan.css" />
+  </head>
+  <header>
     <nav>
-        <a href="home.html">Home</a>
-        <a href="hobbies.html">Hobbies</a>
-        <a href="beliefs.html">Beliefs</a>
-        <a href="site-plan-personal.html">site-plan</a>
-        <img class="logo" src="/final-project/images/image.png" alt="Logo image">
-
-      </nav>
-<h1>
-    CAMS BELIEFS
-</h1>
-</header>
-<body>
-    <p>This is everthing that I believe in!</p>
-<img src="images/2-temples2.jpg" alt="temple">
-<img src="images/temple.jpg" alt="">
-</body>
-<footer>
-    <p>&copy; 2024 | <span id="my-name">Cameron Ricks</span> | All Rights Reserved</p>
+      <a href="home.html">Home</a>
+      <a href="hobbies.html">Hobbies</a>
+      <a href="beliefs.html">Beliefs</a>
+      <a href="site-plan-personal.html">site-plan</a>
+      <img
+        class="logo"
+        src="/final-project/images/image.png"
+        alt="Logo image"
+      />
+    </nav>
+    <h1>CAMS BELIEFS</h1>
+  </header>
+  <body>
+    <h3>The Heart is Eternal</h3>
+    <p>
+      Welcome to The Heart is Eternal, where faith meets a little fun and
+      forever feels just a step away. My heart? Oh, it’s not just any heart—it’s
+      a mix of quiet moments in prayer, spontaneous laughter, and a whole lot of
+      love for late-night talks about the mysteries of eternity. They say the
+      best things last forever, so if you’re up for a journey of connection,
+      kindness, and maybe sharing a hymn or two under the stars, you just might
+      find there’s room for you here. 💕
+    </p>
+    <img src="images/2-temples2.jpg" alt="temple" />
+    <h3>Celestial Vibes only</h3>
+    <p>
+      Welcome to Celestial Vibes Only, where the atmosphere is pure, the humor
+      is light, and the vibes? Absolutely out of this world. I’m all about
+      aiming high—like celestial kingdom kind of high—but don’t worry, there’s
+      room for a little fun on the way. Whether it’s swapping temple trivia,
+      planning dream vacations to sacred spots, or just laughing at the quirks
+      that make us human, this space is all about finding joy in the journey.
+      So, are you ready to vibe on a higher level? Let’s see if you can keep up!
+      🌟
+    </p>
+    <img src="images/temple.jpg" alt="temple" />
+  </body>
+  <footer>
+    <p class="foot">
+      &copy; 2024 | <span id="my-name">Cameron Ricks</span> | All Rights
+      Reserved
+    </p>
   </footer>
 </html>
