--- a/final-project/hobbies.html
+++ b/final-project/hobbies.html
@@ -65,7 +65,7 @@
     </main>
   </body>
   <footer>
-    <p>
+    <p class="foot">
       &copy; 2024 | <span id="my-name">Cameron Ricks</span> | All Rights
       Reserved
     </p>
