--- a/final-project/home.html
+++ b/final-project/home.html
@@ -126,7 +126,7 @@
     </div>
   </body>
   <footer>
-    <p>
+    <p class="foot">
       &copy; 2024 | <span id="my-name">Cameron Ricks</span> | All Rights
       Reserved
     </p>
