--- a/final-project/home.html
+++ b/final-project/home.html
@@ -126,8 +126,14 @@
     </div>
     <footer>
       <p class="foot">
-        &copy; 2024 | <span id="my-name">Cameron Ricks</span> | All Rights
-        Reserved
+        <nav>
+          &copy; 2024 | <span id="my-name">Cameron Ricks</span> | All Rights
+          Reserved
+          <a href="home.html">Home</a>
+          <a href="hobbies.html">Hobbies</a>
+          <a href="beliefs.html">Beliefs</a>
+          <a href="site-plan-personal.html">site-plan</a>        
+        </nav>
       </p>
     </footer>
   </body>
